force-app/main/default/objects/Account_Code__c/Account_Code__c.object-meta.xml
<CustomObject>
    <label>Account Code</label>
    <nameField>
        <label>Account Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>