force-app/main/default/objects/Account_Code__c/fields/Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address__c</fullName>
    <label>Billing Address (Deprecated)</label>
    <type>Address</type>
</CustomField>