force-app/main/default/objects/Account_Code__c/fields/Business_Account__c.field-meta.xml
<CustomField>
    <fullName>Business_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Account (Deprecated)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Codes</relationshipLabel>
    <relationshipName>Account_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>