force-app/main/default/objects/Account_Code__c/fields/Invoiceable__c.field-meta.xml
<CustomField>
    <fullName>Invoiceable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoiceable (Deprecated)</label>
    <type>Checkbox</type>
</CustomField>