force-app/main/default/objects/Account_Code__c/fields/Is_Code_Expired_Today__c.field-meta.xml
<CustomField>
    <fullName>Is_Code_Expired_Today__c</fullName>
    <formula>Expiration_Date__c = TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Code Expired Today</label>
    <type>Checkbox</type>
</CustomField>