force-app/main/default/objects/Account_Code__c/fields/PetProRenewPrice__c.field-meta.xml
<CustomField>
    <fullName>PetProRenewPrice__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>Allos an override of the pet pro memberships rrenewal price</description>
    <label>Pet Pro Renew Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>