force-app/main/default/objects/Account_Code__c/fields/Shelter_Job_ID__c.field-meta.xml
<CustomField>
    <fullName>Shelter_Job_ID__c</fullName>
    <externalId>true</externalId>
    <label>Shelter Job ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>