force-app/main/default/objects/Account_Code__c/fields/Special_Buyer_Group__c.field-meta.xml
<CustomField>
    <fullName>Special_Buyer_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Special Buyer Group</label>
    <referenceTo>BuyerGroup</referenceTo>
    <relationshipLabel>Account Codes</relationshipLabel>
    <relationshipName>Account_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>