force-app/main/default/objects/Account_Code__c/fields/VetRenewPrice__c.field-meta.xml
<CustomField>
    <fullName>VetRenewPrice__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>Allows the renewal price for vet memberships to be overridden</description>
    <label>Vet Renew Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>