force-app/main/default/objects/Account_Code__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Code__c</columns>
    <columns>Payment_Terms__c</columns>
    <columns>Tax_Exempt__c</columns>
    <columns>Tax_Exemption_Number__c</columns>
    <columns>Special_Buyer_Group__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>